2008-06-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use #ifdef for CAIRO_HAS_*.

	* src/rb_cairo_surface.c: guard custom write surfaces from GC to
	avoid writing in GC.
	Reported by James Healy. Thanks!!!

	* README: add James Healy to Thanks list.

	* pkg-config.rb (PackageConfig#guess_default_path): add
	/usr/share/pkgconfig to default path.
	Suggested by James Healy. Thanks!!!

2008-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c: 1.6.2 -> 1.7.0.

	* Rakefile: don't clean on release target to keep generated document.

	* src/rb_cairo_surface.c: rename OpenFile before include rubyio.h.

	* NEWS: add an entry for 1.6.2.

	* pkg-config.rb: work with ruby 1.9.

	* src/rb_cairo.c: 1.7.0 -> 1.6.2.

>>>>>>> 1.265
2008-06-13  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb: add PREFIX/lib64/pkgconfig to default path list.

2008-06-12  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: include <ruby.h>.

	* src/rb_cairo_private.h: add fallback RARRAY_PTR and RARRAY_LEN.

	* src/rb_cairo_context.c, src/rb_cairo_pattern.c: use RARRAY_PTR
	and RARRAY_LEN.

2008-04-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.h: move environment dependent headers to ...
	* src/rb_cairo_surface.c: ... here.
	guard T_DATA macro for old Mac OS X environment.

	* extconf.rb: check enum ruby_value_type availability that is
	defined in Ruby 1.9 with RUBY_T_DATA.

	* pkg-config.rb (PackageConfig#guess_default_path): handle DL exception.

2008-04-26  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: fix document dependency.

2008-04-24  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: don't substitute prefixed gcc.

	* Rakefile: include libruby-cairo.a into gem for mswin32.

	* index.html: update information for Windows users.

	* src/rb_cairo.c: 1.6.1 -> 1.7.0.

	* test/test_pkg_config.rb: update expected result.

	* NEWS: update.

	* Rakefile: fix platform detection.

	* src/rb_cairo.c: 1.7.0 -> 1.6.1.

	* Rakefile, src/lib/cairo.rb: support gem for mswin32.
